make jingle and phone plugins compilable