@@ -1,12 +1,12 @@
 /**
  * Copyright (C) 2004-2011 Jive Software. All rights reserved.
- *
+ * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
+ * <p>
+ * http://www.apache.org/licenses/LICENSE-2.0
+ * <p>
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -38,13 +38,15 @@ import org.jivesoftware.spark.phone.PhoneManager;
 import org.jivesoftware.spark.plugin.Plugin;
 import org.jivesoftware.spark.ui.ChatRoom;
 import org.jivesoftware.spark.ui.TranscriptWindow;
-import org.jivesoftware.spark.util.ModelUtil;
 import org.jivesoftware.spark.util.SwingWorker;
 import org.jivesoftware.spark.util.log.Log;
 import org.jivesoftware.sparkimpl.plugin.gateways.transports.TransportUtils;
 import org.jivesoftware.sparkimpl.settings.local.LocalPreferences;
 import org.jivesoftware.sparkimpl.settings.local.SettingsManager;
-import org.jxmpp.util.XmppStringUtils;
+import org.jxmpp.jid.BareJid;
+import org.jxmpp.jid.EntityBareJid;
+import org.jxmpp.jid.EntityFullJid;
+import org.jxmpp.jid.Jid;
 
 import javax.swing.*;
 import javax.swing.text.BadLocationException;
@@ -60,105 +62,86 @@ import java.util.*;
  */
 public class JinglePlugin implements Plugin, Phone, ConnectionListener {
 
-    private JingleManager jingleManager;
-
     private static final String JINGLE_NAMESPACE = "http://www.xmpp.org/extensions/xep-0166.html#ns";
+    private JingleManager jingleManager;
     private String stunServer = "";
     private int stunPort = 0;
     private boolean readyToConnect = false;
-    private Map<String, Boolean> jingleFeature = new HashMap<>();
+    private final Map<String, Boolean> jingleFeature = new HashMap<>();
     private boolean fallbackStunEnabled = false;
 
+    @Override
     public void initialize() {
-        // Add Jingle to discovered items list.
-	SparkManager.addFeature(JINGLE_NAMESPACE);
+        // Add Jingle to a discovered items list.
+        SparkManager.addFeature(JINGLE_NAMESPACE);
+        final LocalPreferences localPref = SettingsManager.getLocalPreferences();
 
-	final LocalPreferences localPref = SettingsManager.getLocalPreferences();
-	
-	//If there is a server entered in spark.properties use it as fallback
-	if (!localPref.getStunFallbackHost().equals("")) {
-	    fallbackStunEnabled = true;
-	}
+        //If there is a server entered in spark.properties use it as fallback
+        if (!localPref.getStunFallbackHost().isEmpty()) {
+            fallbackStunEnabled = true;
+        }
 
-	// Get the default port
-	stunPort = localPref.getStunFallbackPort();
+        // Get the default port
+        stunPort = localPref.getStunFallbackPort();
 
-	// Set Jingle Enabled
-	JingleManager.setJingleServiceEnabled();
-	JingleManager.setServiceEnabled(SparkManager.getConnection(), true);
+        // Set Jingle Enabled
+        JingleManager.setJingleServiceEnabled();
+        JingleManager.setServiceEnabled(SparkManager.getConnection(), true);
 
-	// Add to PhoneManager
-	PhoneManager.getInstance().addPhone(this);
+        // Add to PhoneManager
+        PhoneManager.getInstance().addPhone(this);
 
-	// Adds a tab handler.
-	SparkManager.getChatManager()
-		.addSparkTabHandler(new JingleTabHandler());
+        // Adds a tab handler.
+        SparkManager.getChatManager().addSparkTabHandler(new JingleTabHandler());
 
-        final SwingWorker jingleLoadingThread = new SwingWorker()
-        {
-            public Object construct()
-            {
-                if ( fallbackStunEnabled )
-                {
+        final SwingWorker jingleLoadingThread = new SwingWorker() {
+            @Override
+            public Object construct() {
+                if (fallbackStunEnabled) {
                     stunServer = localPref.getStunFallbackHost();
                     readyToConnect = true;
                 }
 
-                try
-                {
-
-                    if ( STUN.serviceAvailable( SparkManager.getConnection() ) )
-                    {
-                        STUN stun = STUN
-                                .getSTUNServer( SparkManager.getConnection() );
-                        if ( stun != null )
-                        {
-                            List<STUN.StunServerAddress> servers = stun
-                                    .getServers();
-                            if ( servers.size() > 0 )
-                            {
-                                stunServer = servers.get( 0 ).getServer();
-                                stunPort = Integer.parseInt( servers.get( 0 )
-                                        .getPort() );
+                try {
+                    if (STUN.serviceAvailable(SparkManager.getConnection())) {
+                        STUN stun = STUN.getSTUNServer(SparkManager.getConnection());
+                        if (stun != null) {
+                            List<STUN.StunServerAddress> servers = stun.getServers();
+                            if (!servers.isEmpty()) {
+                                stunServer = servers.get(0).getServer();
+                                stunPort = Integer.parseInt(servers.get(0).getPort());
                                 readyToConnect = true;
                             }
                         }
                     }
 
-
-                    if ( readyToConnect )
-                    {
-                        JingleTransportManager transportManager = new ICETransportManager( SparkManager.getConnection(), stunServer, stunPort );
+                    // Initializes Jingle with STUN and media managers
+                    if (readyToConnect) {
+                        JingleTransportManager transportManager = new ICETransportManager(SparkManager.getConnection(), stunServer, stunPort);
                         List<JingleMediaManager> mediaManagers = new ArrayList<>();
 
                         // Get the Locator from the Settings
                         String locator = SettingsManager.getLocalPreferences().getAudioDevice();
 
-                        mediaManagers.add( new JmfMediaManager( locator, transportManager ) );
-                        mediaManagers.add( new SpeexMediaManager( transportManager ) );
+                        mediaManagers.add(new JmfMediaManager(locator, transportManager));
+                        mediaManagers.add(new SpeexMediaManager(transportManager));
                         //mediaManagers.add(new ScreenShareMediaManager(transportManager));
 
-                        jingleManager = new JingleManager( SparkManager.getConnection(), mediaManagers );
-
-                        if ( transportManager instanceof BridgedTransportManager )
-                        {
-                            jingleManager.addCreationListener( (BridgedTransportManager) transportManager );
-                        }
-                        else if ( transportManager instanceof ICETransportManager )
-                        {
-                            jingleManager.addCreationListener( (ICETransportManager) transportManager );
+                        jingleManager = new JingleManager(SparkManager.getConnection(), mediaManagers);
+                        if (transportManager instanceof BridgedTransportManager) {
+                            jingleManager.addCreationListener((BridgedTransportManager) transportManager);
+                        } else if (transportManager instanceof ICETransportManager) {
+                            jingleManager.addCreationListener((ICETransportManager) transportManager);
                         }
                     }
-                }
-                catch ( XMPPException | SmackException e )
-                {
-                    Log.error( "Unable to initialize", e );
+                } catch (Exception e) {
+                    Log.error("Unable to initialize", e);
                 }
                 return true;
             }
 
-            public void finished()
-            {
+            @Override
+            public void finished() {
                 addListeners();
             }
         };
@@ -168,60 +151,52 @@ public class JinglePlugin implements Plugin, Phone, ConnectionListener {
         // Add Presence listener for better service discovery.
         addPresenceListener();
 
-        SparkManager.getConnection().addConnectionListener( this );
+        SparkManager.getConnection().addConnectionListener(this);
     }
-
 
     /**
      * Adds Jingle and ChatRoom listeners.
      */
     private void addListeners() {
-	
         if (jingleManager == null) {
-            if (readyToConnect)
-            {
-        	Log.error("Unable to resolve Jingle Connection (Host: "+stunServer+" Port: "+stunPort+")");
+            if (readyToConnect) {
+                Log.error("Unable to resolve Jingle Connection (Host: " + stunServer + " Port: " + stunPort + ")");
             }
             return;
-            
         }
-	
-
         // Listen in for new incoming Jingle requests.
-        jingleManager.addJingleSessionRequestListener( request -> SwingUtilities.invokeLater( () -> incomingJingleSession(request) ) );
+        jingleManager.addJingleSessionRequestListener(request -> SwingUtilities.invokeLater(() -> incomingJingleSession(request)));
     }
 
-
-    public Collection<Action> getPhoneActions(final String jid) {
+    @Override
+    public Collection<Action> getPhoneActions(EntityBareJid jid) {
         // Do not even disco gateway clients.
         if (TransportUtils.isFromGateway(jid) || jingleManager == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
-        Boolean supportsJingle = jingleFeature.get(XmppStringUtils.parseBareJid(jid));
+        Boolean supportsJingle = jingleFeature.get(jid.toString());
         if (supportsJingle == null) {
             // Disco for event.
             // Obtain the ServiceDiscoveryManager associated with my XMPPConnection
             ServiceDiscoveryManager discoManager = ServiceDiscoveryManager.getInstanceFor(SparkManager.getConnection());
 
-            String fullJID = PresenceManager.getFullyQualifiedJID(jid);
+            EntityFullJid fullJID = PresenceManager.getFullyQualifiedJID(jid);
 
             // Get the items of a given XMPP entity
             DiscoverInfo discoverInfo = null;
             try {
                 discoverInfo = discoManager.discoverInfo(fullJID);
-            }
-            catch (XMPPException | SmackException e) {
+            } catch (Exception e) {
                 Log.debug("Unable to disco " + fullJID);
             }
 
             if (discoverInfo != null) {
                 // Get the discovered items of the queried XMPP entity
                 supportsJingle = discoverInfo.containsFeature(JINGLE_NAMESPACE);
-                jingleFeature.put(jid, supportsJingle);
-            }
-            else {
-                jingleFeature.put(jid, false);
+                jingleFeature.put(jid.toString(), supportsJingle);
+            } else {
+                jingleFeature.put(jid.toString(), false);
                 supportsJingle = false;
             }
         }
@@ -230,59 +205,52 @@ public class JinglePlugin implements Plugin, Phone, ConnectionListener {
             return Collections.emptyList();
         }
 
-        final List<Action> actions = new ArrayList<>();
         Action action = new AbstractAction() {
-			private static final long serialVersionUID = 1467355627829748086L;
+            private static final long serialVersionUID = 1467355627829748086L;
 
-			public void actionPerformed(ActionEvent e) {
-                try
-                {
+            @Override
+            public void actionPerformed(ActionEvent e) {
+                try {
                     placeCall(jid);
-                }
-                catch ( SmackException e1 )
-                {
-                    Log.warning( "Unable to place call to " + jid, e1 );
+                } catch (SmackException e1) {
+                    Log.warning("Unable to place call to " + jid, e1);
                 }
             }
         };
 
         action.putValue(Action.NAME, "<html><b>" + JingleResources.getString("label.computer.to.computer") + "</b></html>");
         action.putValue(Action.SMALL_ICON, SparkRes.getImageIcon(SparkRes.COMPUTER_IMAGE_16x16));
+        List<Action> actions = new ArrayList<>(1);
         actions.add(action);
         return actions;
     }
 
 
-    public void placeCall(String jid) throws SmackException
-    {
-
+    public void placeCall(BareJid bareJid) throws SmackException {
         // cancel call request if no Media Locator available
         if (PhoneManager.isUseStaticLocator() && PhoneManager.isUsingMediaLocator()) {
             return;
         }
-        
         PhoneManager.setUsingMediaLocator(true);
+        EntityFullJid jid = SparkManager.getUserManager().getFullJID(bareJid);
 
-        jid = SparkManager.getUserManager().getFullJID(jid);
-
-        ChatRoom room = SparkManager.getChatManager().getChatRoom( XmppStringUtils.parseBareJid(jid));
+        ChatRoom room = SparkManager.getChatManager().getChatRoom(jid.asEntityBareJid());
         if (JingleStateManager.getInstance().getJingleRoomState(room) != null) {
             return;
         }
 
         SparkManager.getChatManager().getChatContainer().activateChatRoom(room);
-
         // Create a new Jingle Call with a full JID
-        JingleSession session = null;
+        JingleSession session;
         try {
             session = jingleManager.createOutgoingJingleSession(jid);
-        }
-        catch (XMPPException e) {
+        } catch (XMPPException e) {
             Log.error(e);
+            return;
         }
 
         TranscriptWindow transcriptWindow = room.getTranscriptWindow();
-        StyledDocument doc = (StyledDocument)transcriptWindow.getDocument();
+        StyledDocument doc = (StyledDocument) transcriptWindow.getDocument();
         Style style = doc.addStyle("StyleName", null);
 
         OutgoingCall outgoingCall = new OutgoingCall();
@@ -293,21 +261,23 @@ public class JinglePlugin implements Plugin, Phone, ConnectionListener {
         try {
             doc.insertString(doc.getLength(), "ignored text", style);
             doc.insertString(doc.getLength(), "\n", null);
-        }
-        catch (BadLocationException e) {
+        } catch (BadLocationException e) {
             Log.error(e);
         }
 
         room.scrollToBottom();
     }
 
+    @Override
     public void shutdown() {
     }
 
+    @Override
     public boolean canShutDown() {
         return false;
     }
 
+    @Override
     public void uninstall() {
     }
 
@@ -319,8 +289,7 @@ public class JinglePlugin implements Plugin, Phone, ConnectionListener {
     private void incomingJingleSession(JingleSessionRequest request) {
         if (PhoneManager.isUseStaticLocator() && PhoneManager.isUsingMediaLocator()) {
             request.reject();
-        }
-        else {
+        } else {
             PhoneManager.setUsingMediaLocator(true);
             new IncomingCall(request);
         }
@@ -331,35 +300,21 @@ public class JinglePlugin implements Plugin, Phone, ConnectionListener {
      */
     private void addPresenceListener() {
         // Check presence changes
-        SparkManager.getConnection().addAsyncStanzaListener( stanza -> {
-            Presence presence = (Presence)stanza;
+        SparkManager.getConnection().addAsyncStanzaListener(stanza -> {
+            Presence presence = (Presence) stanza;
             if (!presence.isAvailable()) {
-                String from = presence.getFrom();
-                if (ModelUtil.hasLength(from)) {
+                Jid from = presence.getFrom();
+                if (from != null) {
                     // Remove from
-                    jingleFeature.remove(from);
+                    jingleFeature.remove(from.toString());
                 }
             }
-
-
         }, new StanzaTypeFilter(Presence.class));
     }
 
     @Override
-    public void connected( XMPPConnection xmppConnection ) {
+    public void connected(XMPPConnection xmppConnection) {
         SparkManager.addFeature(JINGLE_NAMESPACE);
-    }
-
-    @Override
-    public void authenticated( XMPPConnection xmppConnection, boolean b ) {
-    }
-
-    @Override
-    public void connectionClosed() {
-    }
-
-    @Override
-    public void connectionClosedOnError(Exception e) {
     }
 
 }
